Fixed an issue where label is not visible on hover, while hover on icon or expand arrow. refs #6847

--- a/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
+++ b/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
@@ -32,6 +32,11 @@
   &:hover, &.pseudo-active {
     background-color: $tree-bg-hover !important;
     color: $tree-fg-hover !important;
+    span.file-label {
+      span.file-name {
+        color: $tree-text-hover-fg !important;
+      }
+    }
   }
   &.active, &.prompt {
     background-color: $tree-bg-selected !important;
